fixed button alignment

--- a/SoAir/mobile/css/main.css
+++ b/SoAir/mobile/css/main.css
@@ -29,7 +29,7 @@ h1 {
 	color: white;
 	font-size: 1em;
 	float: right;
-	margin-top: -75px;
+	margin-top: -90px;
 	margin-right: 30px;
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
